Fixes footer alignment issues (#117)

--- a/src/components/navigation/Footer/Footer.scss
+++ b/src/components/navigation/Footer/Footer.scss
@@ -17,7 +17,7 @@
 
   #footer-body {
     display: flex;
-    padding: 12px 24px;
+    padding: 12px;
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
@@ -168,7 +168,7 @@
 
   // Logo/Copyright
   #company-banner {
-    padding-left: 64px;
+    padding-left: 12px;
     display: flex;
 
     @media screen and (max-width: 768px) {
